img res on mobile fixed

--- a/blocks/pop-up/__image/pop-up__image.css
+++ b/blocks/pop-up/__image/pop-up__image.css
@@ -1,5 +1,12 @@
 .pop-up__image {
   max-width: 75vw;
-  max-height: 75vh;
+  height: 75vh;
   object-fit: cover;
 }
+
+@media (max-width: 600px) {
+  .pop-up__image {
+    max-height: 299px;
+  }
+}
+
