--- a/blocks/pop-up/_active/pop-up_active.css
+++ b/blocks/pop-up/_active/pop-up_active.css
@@ -2,5 +2,5 @@
   display: block;
   visibility: visible;
   opacity: 1;
-  transition: visibility .3s, opacity .3s;
+  transition: visibility 0.3s, opacity, .3s;
   }
