--- a/blocks/pop-up/pop-up.css
+++ b/blocks/pop-up/pop-up.css
@@ -11,5 +11,6 @@
   visibility: hidden;
   opacity: 0;
   text-align: center;
-display: flex;
+  display: flex;
+  transition: visibility 0.3s, opacity, .3s;
 }
